Web enh: Fix spacing of code blocks

--- a/sweagent/frontend/src/static/envMessage.css
+++ b/sweagent/frontend/src/static/envMessage.css
@@ -4,7 +4,7 @@
   /* border-bottom: 1px dashed black; */
 }
 
-.envMessageOutput{
+.envMessageOutput, .envMessageDiff {
   border-radius: 0em 0em 1em 1em;
   margin: 0em 1em 1em 1em;
 }
